# jeopardy-api

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: .env.template  docker-compose.local.yml
src/: __init__.py  __main__.py  alembic.ini  application.py  lifespan.py  settings.py
src/api/: context_variables.py  utilities.py
src/api/authnetication/: __init__.py  password.py  scheme.py  token.py
src/api/dependencies/: __init__.py  authentication.py  authorization.py  query.py  websocket.py
src/api/enums/: __init__.py  app_state.py  player.py  query.py  websocket.py
src/api/interfaces/: __init__.py  data_store_interface.py
src/api/messages/: __init__.py  base.py  connect.py  user.py
src/api/routes/: __init__.py  app_router.py
src/api/schemas/: __init__.py  authnetication.py  base.py  error.py  lobby.py  pagination.py  player.py  query.py  user.py  websocket.py
src/api/services/: __init__.py  lobby.py  mixins.py  pagination.py  player.py  route.py  user.py
src/cutom_types/: __init__.py  base.py  database.py  player.py  redis.py  websocket.py
src/database/: base_model.py  dependencies.py  manager.py
src/database/dals/: __init__.py
src/database/migrations/: env.py
src/database/models/: __init__.py  lobby.py  player.py  user.py
src/database/query_managers/: __init__.py  base.py  lobby.py  player.py  user.py
src/exceptions/: __init__.py  handlers.py  responses.py
src/exceptions/http/: __init__.py  authorization.py  base.py  database.py  lobby.py  not_found.py  schema.py  (+1 more)
src/tests/: conftest.py  utilities.py
(+96 files in other folders)
